#final-draft: fix cross-browser text align for legend

--- a/source/sass/components/registration-form.scss
+++ b/source/sass/components/registration-form.scss
@@ -183,6 +183,7 @@
   .registration-form {
     &__title {
       display: block;
+      width: 100%;
 
       text-align: center;
     }
